--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -1,30 +1,30 @@
-#summary Instruction manual for using Condor-Copasi
+#summary Instruction manual for using Condor-COPASI
 #labels Phase-Support,Featured
 
 
 =Introduction=
-Condor-Copasi is a web-based interface for integrating [http://www.copasi.org Copasi] with the [http://www.cs.wisc.edu/condor/ Condor] High Throughput Computing (HTC) environment. It provides Copasi users with a simple environment for utilising the power of High Throughput Computing, without requiring any technical knowledge of Condor of other HTC tools.
+Condor-COPASI is a web-based interface for integrating [http://www.copasi.org COPASI] with the [http://www.cs.wisc.edu/condor/ Condor] High Throughput Computing (HTC) environment. It provides COPASI users with a simple environment for utilising the power of High Throughput Computing, without requiring any technical knowledge of Condor of other HTC tools.
 
 <wiki:toc max_depth="3" />
 
 ==Log In==
-Before you can access Condor-Copasi you must have a user account created. Speak to you System Administrator for further details.
+Before you can access Condor-COPASI you must have a user account created. Speak to you System Administrator for further details.
 
 If you have a user account, log in by clicking on the link in the top-right.
 
 ==Submit new jobs==
-Condor-Copasi is able to perform a number of predefined tasks. Each task requires that the user set up a model using Copasi, and upload the Copasi model file to the web server.
+Condor-COPASI is able to perform a number of predefined tasks. Each task requires that the user set up a model using COPASI, and upload the COPASI model file to the web server.
 
 To submit a new job, click 'Tasks' on the sidebar on the left, and select from the following tasks types. Click on the task name for more information on how the task operates, and how to prepare files.
 
 ====[TaskTypes#Global_Sensitivity_Analysis_/_Sensitivity_Optimization Global Sensitivity Analysis / Sensitivity Optimization]====
-Condor-Copasi is able to automate and parallelize the global sensitivity analysis procedure, as described in the paper [http://www.ncbi.nlm.nih.gov/pubmed/18632455 A new strategy for assessing sensitivities in biochemical models].
+Condor-COPASI is able to automate and parallelize the global sensitivity analysis procedure, as described in the paper [http://www.ncbi.nlm.nih.gov/pubmed/18632455 A new strategy for assessing sensitivities in biochemical models].
 
 ====[TaskTypes#Stochastic_Simulation Stochastic Simulation]====
-Condor-Copasi provides an easy to use environment for running multiple stochastic simulations. The simulations are automatically split into parallel jobs and run on the Condor pool. Once completed, the results are automatically collated, and particle number means and standard deviations calculated. Plots of this processed data can be obtained through the web interface.
+Condor-COPASI provides an easy to use environment for running multiple stochastic simulations. The simulations are automatically split into parallel jobs and run on the Condor pool. Once completed, the results are automatically collated, and particle number means and standard deviations calculated. Plots of this processed data can be obtained through the web interface.
 
 ====[TaskTypes#Parallel_Scan Parallel Scan]====
-Condor-Copasi will take a Parameter Scan set up in Copasi and automatically split it into smaller chunks. In cases where multiple scan tasks/repeats are nested, only the the top-level scan will be split. The smaller chunks are then submitted to the Condor pool, and the results collated as if the scan task had been run on a single machine.
+Condor-COPASI will take a Parameter Scan set up in COPASI and automatically split it into smaller chunks. In cases where multiple scan tasks/repeats are nested, only the the top-level scan will be split. The smaller chunks are then submitted to the Condor pool, and the results collated as if the scan task had been run on a single machine.
 
 ====[TaskTypes#Optimization_Repeat Optimization Repeat]====
 This feature runs the optimization task a set number of times, splitting into multiple parallel jobs where necessary. The best value from the multiple number of runs is extracted, though the results of every optimization run are available for download too if necessary.
@@ -35,7 +35,7 @@ Similar to the optimization repeat task above, this feature runs the parameter e
 
 
 ====[TaskTypes#Optimization_Repeat_with_Different_Alogorithms Optimization Repeat with Different Alogorithms]====
-This feature runs the optimization task using different algorithms. Each algorithm runs a separate parallel job. Condor-Copasi will automatically determine which algorithm(s) found the best result.
+This feature runs the optimization task using different algorithms. Each algorithm runs a separate parallel job. Condor-COPASI will automatically determine which algorithm(s) found the best result.
 
 
 ==Monitor the status of submitted jobs==
@@ -50,7 +50,7 @@ The status of jobs on the system is refreshed approximately every two minutes.
 Jobs submitted will have a status as one of the following:
 
 || *Status* || *Description*||
-|| *New, waiting for Condor submission* || The job was successfully uploaded to Condor-Copasi, and is awaiting submission to the Condor pool ||
+|| *New, waiting for Condor submission* || The job was successfully uploaded to Condor-COPASI, and is awaiting submission to the Condor pool ||
 || *Submitted to Condor* || The job was successfully parallelized and a number of Condor jobs were submitted to the pool. The status of these Condor jobs can be viewed by clicking on the job name ||
 || *Finished, processing data on Condor* || Currently only used for the Stochastic Simulation task. All simulations have completed, and the output data is being processed. This step can be computationally intensive, and so is being run on the Condor pool as a single Condor job.||
 || *Finished, processing data locally* || All simulations/optimizations have completed, and the results are being processed on the server ||
